[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]

addopts = "--timeout=150 --cov-report=xml:coverage.xml --cov-report=term-missing --cov=custom_components.here_comes_the_bus --cov-fail-under=100 --disable-socket --allow-unix-socket"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = ">=2024.10.3"
hcb-soap-client = ">=0.0.8"
xmltodict = ">=0.14.2"

[tool.poetry.group.dev.dependencies]
debugpy = ">=1.8.7"
pip = ">=24.3.1"
ruff = ">=0.7.1"
poetry = ">=1.8.4"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.3"
pytest-homeassistant-custom-component = ">=0.13.175"