# The contents of ruff config is based on https://github.com/home-assistant/core/blob/dev/pyproject.toml

[project]
name = "here-comes-the-bus"
version = "v1.0.1"
requires-python = ">=3.12"
dependencies = [
    "pip==25.3",
    "homeassistant==2026.1.3",
    "hcb-soap-client==0.1.2",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component==0.13.308",
    "pytest-freezer==0.4.9",
    "pycares<5.0.2",
    "colorlog==6.10.1",
]
dev = ["ruff==0.14.14", "debugpy==1.8.19"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

addopts = "--timeout=150 --cov-report=xml:coverage.xml --cov-report=term-missing --cov=custom_components.here_comes_the_bus --cov-fail-under=100 --disable-socket --allow-unix-socket"

[tool.coverage.report]
exclude_also = ["raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203",   # no-blank-line-before-class (incompatible with formatter)
    "D212",   # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
    "EXE002", # shebang-missing-executable-file
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
# Ignore `S101` (use of assert)` and `SLF001` (private members)` in tests.
"tests/__init__.py" = ["S101"]
"tests/test_binary_sensor.py" = ["S101", "SLF001"]
"tests/test_config_flow.py" = ["S101", "SLF001"]
"tests/test_coordinator.py" = ["S101", "SLF001"]
"tests/test_device_tracker.py" = ["S101", "SLF001"]
"tests/test_entity.py" = ["S101", "SLF001"]
"tests/test_init.py" = ["S101", "SLF001"]
"tests/test_sensor.py" = ["S101", "SLF001"]
